--- a/nutrition-calculators.html
+++ b/nutrition-calculators.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GreenBite | Nutrition Calculators</title>
 
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta name="theme-color" content="#00b86b" />
-    <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
+    <link rel="icon" href="./assets/images/favicon.png" type="image/png" />
 
     <link rel="stylesheet" href="./vendors/normalize.css" />
 
@@ -21,26 +21,28 @@
       <div class="header__container">
         <div>
           <div class="header__logo">
-            <a href="/"><span class="logo__accent">Green</span>Bite</a>
+            <a href="./index.html"
+              ><span class="logo__accent">Green</span>Bite</a
+            >
           </div>
         </div>
         <div class="header__nav">
           <ul>
             <li>
-              <a href="/recipes.html">Recipes</a>
+              <a href="./recipes.html">Recipes</a>
             </li>
             <li>
-              <a href="/nutrition-calculators.html">Nutrition Calculators</a>
+              <a href="./nutrition-calculators.html">Nutrition Calculators</a>
             </li>
             <li>
-              <a href="/workout-generator.html">Workout Generator</a>
+              <a href="./workout-generator.html">Workout Generator</a>
             </li>
             <li>
-              <a href="/mindfulness-activity.html">Mindfulness Activity</a>
+              <a href="./mindfulness-activity.html">Mindfulness Activity</a>
             </li>
           </ul>
           <button class="header__nav-cta">
-            <a href="/contact.html">Contact Us</a>
+            <a href="./contact.html">Contact Us</a>
           </button>
         </div>
         <button class="header__hamburger" type="button">
@@ -87,16 +89,18 @@
       </div>
       <nav class="header__mobile-nav">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/recipes.html">Recipes</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./recipes.html">Recipes</a></li>
           <li class="header__mobile-section-title">Tools</li>
           <li>
-            <a href="/nutrition-calculators.html">Nutrition Calculators</a>
+            <a href="./nutrition-calculators.html">Nutrition Calculators</a>
           </li>
-          <li><a href="/workout-generator.html">Workout Generator</a></li>
-          <li><a href="/mindfulness-activity.html">Mindfulness Activity</a></li>
+          <li><a href="./workout-generator.html">Workout Generator</a></li>
           <li>
-            <a class="header__mobile-cta" href="/contact.html">Contact Us</a>
+            <a href="./mindfulness-activity.html">Mindfulness Activity</a>
+          </li>
+          <li>
+            <a class="header__mobile-cta" href="./contact.html">Contact Us</a>
           </li>
         </ul>
       </nav>
@@ -258,15 +262,15 @@
           <h2 id="footer-links-heading">Links</h2>
           <nav class="footer__nav">
             <ul>
-              <li><a href="/recipes.html">Recipes</a></li>
+              <li><a href="./recipes.html">Recipes</a></li>
               <li>
-                <a href="/nutrition-calculators.html">Nutrition Calculators</a>
+                <a href="./nutrition-calculators.html">Nutrition Calculators</a>
               </li>
-              <li><a href="/workout-generator.html">Workout Generator</a></li>
+              <li><a href="./workout-generator.html">Workout Generator</a></li>
               <li>
-                <a href="/mindfulness-activity.html">Mindfulness Activity</a>
+                <a href="./mindfulness-activity.html">Mindfulness Activity</a>
               </li>
-              <li><a href="/contact.html">Contact Us</a></li>
+              <li><a href="./contact.html">Contact Us</a></li>
             </ul>
           </nav>
         </section>
