feat: change the contact page address

--- a/contact.html
+++ b/contact.html
@@ -185,8 +185,8 @@
             <div>
               <dt>Address</dt>
               <dd>
-                <i class="fa-solid fa-location-dot contact__icon"></i> Some
-                address in Colombo, Sri Lanka
+                <i class="fa-solid fa-location-dot contact__icon"></i> No. 123,
+                Galle Road, Colombo 03, Sri Lanka
               </dd>
             </div>
           </dl>
@@ -272,7 +272,7 @@
       <div class="map__frame">
         <iframe
           id="gb-map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63315.08986973378!2d79.78616495!3d6.921837849999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596bdf4a3f57%3A0x9e6bf1d4298b2ff9!2sColombo!5e0!3m2!1sen!2slk!4v1710000000000!5m2!1sen!2slk"
+          src="https://www.google.com/maps?q=No.%20123%2C%20Galle%20Road%2C%20Colombo%2003%2C%20Sri%20Lanka&output=embed"
           style="border: 0"
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
